Mojo C++ bindings: fix sanity check of wtf string serialization.

Previously the code had a check that we use exactly the same WTF::String object
for GetSerializedSize_ and Serialize_ call. However, because WTF::String is
ref-counted, we may end up using different WTF::String objects referring to the
same contents. That may happen, e.g., when moving WTF::String to a different
container.

This CL changes the sanity check to verify that the size of WTF::String remains
unchanged.

BUG=595791

Review URL: https://codereview.chromium.org/1810253002

Cr-Commit-Position: refs/heads/master@{#381880}

Former-commit-id: ff43dcf4c622fb46b062abca1024a89fb01b54c7